# gaither

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PROJECT_PROPOSAL.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  turbo.json
.github/workflows/: mirror.yml
.serena/: project.yml
backend/: config.py  database.py  main.py  models.py  openapi.json  package.json  run.py
backend/agents/: analyzer.py  base.py  engager.py  hunter.py  orchestrator.py
backend/api/: __init__.py  analysis_routes.py  candidates.py  chat.py  jobs.py  neo4j_routes.py  search.py
backend/services/: __init__.py  apify_service.py  chat_tools.py  claude_service.py  github_service.py  websocket_manager.py
backend/services/llm/: __init__.py  base.py  claude_service.py  gemini_service.py
backend/services/neo4j/: __init__.py  service.py  test.py
backend/services/weaviate/: README.md  __init__.py  agent.py  index.py  service.py  test.py
docs/: ARCHITECTURE.md  DATABASE_DEDUPLICATION.md
frontend/: .env.example  index.html  next.config.mjs  orval.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  proxy.ts
frontend/src/api/: client.js  client.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentStatus.jsx  AgentStatus.tsx  CandidateCard.jsx  CandidateCard.tsx  CandidateGrid.jsx  CandidateGrid.tsx  Dashboard.jsx  Dashboard.tsx  JobForm.jsx  JobForm.tsx  LandingPage.tsx  MetricsPanel.jsx  (+14 more)
(+130 files in other folders)
