[project]
name = "gaither"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.75.0",
    "apify-client==1.5.0",
    "fastapi==0.104.1",
    "google-genai>=1.2.0",
    "httpx==0.26.0",
    "loguru>=0.7.3",
    "polars>=1.36.1",
    "pydantic==2.8.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "sqlglot>=28.3.0",
    "uvicorn[standard]==0.24.0",
    "weaviate-client==4.18.3",
    "websockets>=13.0",
]
